refactor: TableGroupService ungroup 메서드 수정